--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
     background: rgba(255,255,255,0.3);
     display: flex;
     align-items: center;
+    box-shadow: 0 0 15px;
 }
 
 .input-box input{
@@ -89,3 +90,28 @@
     color: #ffff76;
 }
 
+
+
+@media screen and (max-width: 768px) {
+    .calculator h1 {
+        font-size: 25px;
+    }
+
+    .input-box {
+        display: flex;
+        justify-content: center;
+        width: 350px;
+    }
+
+    .result-form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 250px;
+    }
+
+    #result {
+        font-size: 15px;
+        font-weight: 600;
+    }
+}
